--- a/css/map.css
+++ b/css/map.css
@@ -56,21 +56,21 @@ h5 {
 }
 
 .description {
-	cursor:pointer;
+    cursor:pointer;
 }
 .description:hover {
-	transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 h7 {
-	padding-bottom: 25px;
-	font-family: 'MONO';
-	display: flex;
-	max-width:750px;
-	color: white;
-	font-size: 20px;
-	text-align:left;
-	line-height: 120%;
+    padding-bottom: 25px;
+    font-family: 'MONO';
+    display: flex;
+    max-width:750px;
+    color: white;
+    font-size: 20px;
+    text-align:left;
+    line-height: 120%;
 }
 
 
@@ -130,7 +130,7 @@ nav .dropdown li {
 }
 
 nav .dropdown li a {
-	
+    
   display: block;
   padding: 10px 10px;
   color: white;
@@ -188,8 +188,8 @@ nav .dropdown {
 }
 
 .spoiler {
-	position: relative;
-	margin: 25px;
+    position: relative;
+    margin: 25px;
 }
 .content {
   position: relative;
@@ -243,103 +243,103 @@ nav .dropdown {
 }
 
 .modal {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
-	font-family: 'MONO';
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	max-width:70%;
-	height: 100%;
-	color: gold;
-	padding: 15px;
-	font-size: 35px;
-	text-align: center;
+    font-family: 'MONO';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width:70%;
+    height: 100%;
+    color: gold;
+    padding: 15px;
+    font-size: 35px;
+    text-align: center;
 }
 
 .modal-caption {
-	padding:20px;
+    padding:20px;
 }
 
 .modal img {
-	max-width: 170%;
-	object-fit: contain;
-	margin: 0 auto;
-	cursor: pointer;
+    max-width: 170%;
+    object-fit: contain;
+    margin: 0 auto;
+    cursor: pointer;
 }
 
 .modal img:hover {
-	transform: scale(1.01);
+    transform: scale(1.01);
 }
 
 .modal-navigation {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: 10px;
-	color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    color: #fff;
 }
 
 .modal-navigation button {
-	padding:20px;
-	border: none;
-	background: none;
-	font-size: 100px;
-	color: #fff;
-	cursor: pointer;
-	outline: none;
+    padding:20px;
+    border: none;
+    background: none;
+    font-size: 100px;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
 }
 
 .modal-navigation button:hover {
-	color: #ccc;
-	transform: scale(1.1);
+    color: #ccc;
+    transform: scale(1.1);
 }
 
 .LORE {
-	display: table-cell;
+    display: table-cell;
     padding-left: 20px;
-	cursor:pointer;
+    cursor:pointer;
 }
 
 .lore {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
     justify-content: center;
     align-items: center;
 }
 
 .lore-content {
-	font-family: 'MONO';
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 90%;
-	width: 70%;
-	color: white;
-	padding: 10px;
-	font-size: 25px;
-	text-align: left;
+    font-family: 'MONO';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90%;
+    width: 70%;
+    color: white;
+    padding: 10px;
+    font-size: 25px;
+    text-align: left;
 }
 
 .audio-modal {
@@ -408,11 +408,58 @@ audio {
 
 .map img {
   background-color:gold;
-  border-radius:20px;
   padding:10px;
   display: inline-block;
   max-width: 100%;
   border-radius: 25px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: transform 0.2s ease-in-out;
+}
+
+.Hover img {
+  background-color:rgb(255, 255, 255);
+  padding: 2px;
+  max-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Transition pour la transparence */
+}
+
+/* Animation d'apparition avec un slide depuis le haut */
+.fadeIn {
+  opacity: 1;
+  transform: translateY(0); /* Position finale */
+  animation: fadeInAnimation 0.4s ease forwards;
+}
+
+/* Animation de disparition */
+.fadeOut {
+  opacity: 0;
+  transform: translateY(-20px);
+  animation: fadeOutAnimation 0.3s ease forwards;
+}
+
+/* Animation pour l'apparition */
+@keyframes fadeInAnimation {
+  from {
+      opacity: 0;
+      transform: translateY(-40px); 
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+/* Animation pour la disparition */
+@keyframes fadeOutAnimation {
+  from {
+      opacity: 1;
+      transform: translateY(0);
+  }
+  to {
+      opacity: 0;
+      transform: translateY(-40px);
+  }
 }
